<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_signup_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_signup_title"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_signup_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_id"
        android:textSize="20sp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_title"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/et_signup_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/et_id_hint"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_id"/>

    <TextView
        android:id="@+id/tv_signup_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        android:textSize="20sp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_signup_id"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/et_signup_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_pw"
        android:hint="@string/et_password_hint" />

    <TextView
        android:id="@+id/tv_signup_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_signup_nickname"
        android:textSize="20sp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_signup_pw"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/et_signup_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname"
        android:hint="@string/et_nickname_hint" />

    <TextView
        android:id="@+id/tv_signup_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_signup_age"
        android:textSize="20sp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_signup_nickname"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/et_signup_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_age"
        android:hint="@string/et_age_hint" />

    <Button
        android:id="@+id/btn_signup_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup_signup"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="60dp"
        android:padding="10dp"
        android:gravity="center"
        />


</androidx.constraintlayout.widget.ConstraintLayout>